; ModuleID = '/home/carl/AnghaBench/esp-idf/components/log/extr_log.c_esp_log_set_vprintf.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/log/extr_log.c_esp_log_set_vprintf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_log_mutex = common dso_local global i64 0, align 8
@portMAX_DELAY = common dso_local global i32 0, align 4
@s_log_print_func = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_log_set_vprintf(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i64, i64* @s_log_mutex, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %8, label %6

6:                                                ; preds = %1
  %7 = call i64 (...) @xSemaphoreCreateMutex()
  store i64 %7, i64* @s_log_mutex, align 8
  br label %8

8:                                                ; preds = %6, %1
  %9 = load i64, i64* @s_log_mutex, align 8
  %10 = load i32, i32* @portMAX_DELAY, align 4
  %11 = call i32 @xSemaphoreTake(i64 %9, i32 %10)
  %12 = load i32, i32* @s_log_print_func, align 4
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %2, align 4
  store i32 %13, i32* @s_log_print_func, align 4
  %14 = load i64, i64* @s_log_mutex, align 8
  %15 = call i32 @xSemaphoreGive(i64 %14)
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i64 @xSemaphoreCreateMutex(...) #1

declare dso_local i32 @xSemaphoreTake(i64, i32) #1

declare dso_local i32 @xSemaphoreGive(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
